--- a/src/sass/_interface.scss
+++ b/src/sass/_interface.scss
@@ -7,20 +7,30 @@
   font-weight: $bold;
   text-transform: uppercase;
   transition: 0.2s;
-  &:hover{
+
+  &:hover {
     cursor: pointer;
     background-color: lighten($main, 5%);
   }
 }
-.section{
-  &-title{
+
+.section {
+  &-title {
     margin-bottom: 10px;
     font-family: $segoe;
     font-size: 28px;
     color: $main;
   }
-  &-subtitle{
+
+  &-subtitle {
     font-size: 28px;
     font-weight: $bold;
   }
+}
+
+.fixed {
+  position: fixed;
+  top: 10px;
+  width: 100%;
+  z-index: 9;
 }
