--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,15 +14,7 @@
 
 .main-nav {
   margin-bottom: 220px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
+  position: absolute;
 }
 
 .main-nav__icon {
@@ -65,6 +57,15 @@
   font-size: 28px;
 }
 
+.nav-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
 .button {
   padding: 13px 33px;
   border-radius: 6px;
@@ -92,6 +93,13 @@
 .section-subtitle {
   font-size: 28px;
   font-weight: 600;
+}
+
+.fixed {
+  position: fixed;
+  top: 10px;
+  width: 100%;
+  z-index: 9;
 }
 
 a,
