--- a/src/sass/_interface.scss
+++ b/src/sass/_interface.scss
@@ -29,8 +29,14 @@
 }
 
 .fixed {
+  margin-top: 0;
   position: fixed;
-  top: 10px;
+  top: 0;
   width: 100%;
   z-index: 9;
+  background-color: rgba($color: #fff, $alpha: 0.3);
+
+  &-main {
+    margin-top: 0;
+  }
 }
