--- a/src/sass/_interface.scss
+++ b/src/sass/_interface.scss
@@ -26,6 +26,13 @@
     font-size: 28px;
     font-weight: $bold;
   }
+
+  &-descr {
+    font-family: $popp;
+    font-size: 16px;
+    color: #808080;
+    line-height: 28px;
+  }
 }
 
 .fixed {
