--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@
 @import "_nav";
 @import "_interface";
 @import "_features";
+@import "_convenience";
 
 a, input, button, textarea {
   outline: none;
