--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -30,6 +30,10 @@
       font-size: 14px;
       text-transform: uppercase;
       font-weight: $bold;
+
+      &:hover {
+        color: $main;
+      }
     }
   }
 }
