--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import "_interface";
 @import "_features";
 @import "_convenience";
+@import "_choice";
 
 a, input, button, textarea {
   outline: none;
