--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 @import "_features";
 @import "_convenience";
 @import "_choice";
+@import "_packages";
 
 a, input, button, textarea {
   outline: none;
