--- a/src/sass/_interface.scss
+++ b/src/sass/_interface.scss
@@ -47,3 +47,11 @@
     margin-top: 0;
   }
 }
+
+.selectboxit-container .selectboxit, .selectboxit-container .selectboxit-options, .selectboxit-option-first, .selectboxit-option-last {
+  border-radius: 0;
+}
+
+.iconsss{
+  background-color: $main;
+}
