--- a/src/sass/_interface.scss
+++ b/src/sass/_interface.scss
@@ -48,10 +48,79 @@
   }
 }
 
-.selectboxit-container .selectboxit, .selectboxit-container .selectboxit-options, .selectboxit-option-first, .selectboxit-option-last {
-  border-radius: 0;
+.ik_select {
+  height: 60px;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
-.iconsss{
+.ik_select_link {
+  padding-left: 50px;
+  background-color: #fff;
+  border-right: 1px solid #b6b6b6;
+  height: 100%;
+
+  &:hover {
+    background-color: darken(#fff, 7%);
+  }
+}
+
+.ik_select_link_focus {
+  background-color: darken(#fff, 7%);
+}
+
+.ik_select_link_disabled {
+  /* Disabled state of the fake select */
+}
+
+.ik_select_link_text {
+  color: #808080;
+  font-size: 20px;
+  line-height: 60px;
+  text-align: left;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.ik_select_dropdown {
+}
+
+.ik_select_list {
   background-color: $main;
+  width: 247px;
+}
+
+.ik_select_optgroup {
+  /* Optgroup */
+}
+
+.ik_select_optgroup_label {
+  /* Optgroup label */
+}
+
+.ik_select_option {}
+
+.ik_select_option_label {
+}
+
+.ik_select_hover {
+  background-color: darken(#fff, 7%);
+}
+
+.ik_select_active {
+  /* The active state of an option */
+}
+
+.ik_select_filter_wrap {
+  /* Wrapper for the filter input */
+}
+
+.ik_select_filter {
+  /* Filter input */
+}
+
+.ik_nothing_found {
+  /* Block that's shown when there's nothing found. */
 }
