--- a/src/sass/_packages.scss
+++ b/src/sass/_packages.scss
@@ -3,6 +3,7 @@
   padding-top: 145px;
   padding-bottom: 150px;
   background: $gray url(../img/packages/bg.jpg) center no-repeat;
+  margin-bottom: 400px;
 
   .section {
     &-subtitle {
